--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
     padding: 0px;
 }
 
+html{
+    scroll-behavior: smooth;
+}
 .logo{
     width: 80%;
     height: 100%;
@@ -13,8 +16,9 @@
 }
 
 .logo img{
-    width: 60%;
+    width: 30%;
     height: 100%;
+    margin: 2px;
 }
 
 .navbar{
@@ -23,11 +27,11 @@
     justify-content: center;
     position: sticky;
     top:0;
-    cursor: pointer;   
+    cursor: pointer;  
 }
 
 .nav-list{
-    width: 50%;
+    width: 70%;
     display: flex;
     align-items: ceenter;
 }
@@ -40,6 +44,8 @@
 .nav-list li a{
     text-decoration: none;
     color: white;
+    font-size: 20px;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .nav-list li a:hover{
@@ -47,7 +53,7 @@
 }
 
 .rightNav{
-    width: 50%;
+    width: 30%;
     text-align: right;
     padding: 0 23px;
 }
@@ -59,8 +65,8 @@
     border-radius: 9px;
 }
 .background{
-    background: rgba(0, 0, 0, 0.7) url('../img/bg.jpg');
-    background-size: cover;
+    background: rgba(0, 0, 0, 0.7) url('../img/bg.jpg'); 
+    /* background-size: cover; */
     background-blend-mode: darken;
 }
 
@@ -91,7 +97,7 @@
 }
 
 .secondHalf img{
-    width: 90%;
+    width: 150%;
     border: 4px solid white;
     border-radius: 150px;
     display: block;
@@ -110,13 +116,21 @@
  margin: 7px 3px;
  border: 2px solid white;
  border-radius: 8px;
- /* color: white; */
+ color: black;
  cursor: pointer;
+ font-family: 'Ubuntu', sans-serif;
+ font-size: 20px;
 }
 
 .btn-sm{
     padding: 6px 10px;
     vertical-align: middle;
+    font-size: 16px;
+}
+
+.btn-dark{
+    color: black;
+    border: 2px solid grey;
 }
 
 .section{
@@ -127,6 +141,7 @@
     max-width: 80%;
     margin: auto;
     font-family: 'Ubuntu', sans-serif;
+    padding: 10px;
 }
 
 .section-left{
@@ -154,24 +169,94 @@
 
 .contact{
     background-color: powderblue;
-    height: 533px;
+    height: 950px;
 }
 .text-center{
     text-align: center;
-    padding: 30px;
+    padding-top: 30px;
     font-family: 'Ubuntu', sans-serif;
     font-size: 45px;
 }
 .form{
-    max-width: 500px;
-    margin: 42px auto;
+    max-width: 62%;
+    margin: 25px auto;
 }
 
-.form input{
-    margin: 30px 0;
-    padding: 5px 3px;
+.form-input{
+    margin: 14px 0;
+    padding: 5px 13px;
     width: 100%;
     font-size: 19px;
     border: 2px solid grey;
     border-radius: 6px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.text-footer{
+    text-align: center;
+    padding: 30px 0;
+    font-family: 'Ubuntu', sans-serif;
+    display: flex;
+    justify-content: center;
+    color: white;
+}
+
+.burger{
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top:15px;
+}
+
+.line{
+    width: 33px;
+    background-color: white;
+    height: 4px;
+    margin: 5px 3px;
+}
+
+@media only screen and (max-width: 1140px) {
+    .nav-list{
+        flex-direction: column;
+    }
+    .navbar{
+        height: 447px; 
+        flex-direction: column;
+        transition: all 5.7s ease-out;
+    }
+    .rightNav{
+        text-align: center;
+    }
+    .box-main{
+        flex-direction: column-reverse;
+        max-width: 100%;
+    }
+    #search{
+        width: 100%;
+    }
+    .burger{
+        display: block;
+    }
+    .h-nav-resp{
+        height: 72px;
+    }
+    .v-class-resp{
+        opacity: 0;
+    }
+    .section{
+        flex-direction: column-reverse;
+    }
+    .text-small{
+        text-align: center;
+    }
+    .text-big{
+        text-align: center;
+    }
+    .buttons{
+        text-align: center;
+    }
+    .paras{
+        padding: 0px;
+    }
 }
